# SpacecraftSoftware

./: .clang-format  .gdb_history  .gitignore  .gitmodules  .travis.yml  Confusius.db  Makefile  README.md  WORKSPACE  gtest.BUILD  qemu.sh
HeliumLib/: BUILD  packet.cpp  packet.hpp
HelloLib/: BUILD  message.cpp
SensorCommsLib/: BUILD  SampleSensor.cpp  SampleSensor.h  Sensor.cpp
SensorCommunication/: CallBackTimer.h  SampleSensor.cpp  SampleSensor.h  Sensor.cpp  Sensor.h
common/: common.mk  googletest.mk
ext-tree/: .gitignore  Config.in  external.desc  external.mk
hello/: .gitignore  Makefile  README.md  hello.mk
logger/: .gitignore  README.md  SQLite Notes.txt  logger.mk  testDB.db
radiation-tests/: README.md  bitFlipsRamTest  bitFlipsRamTest.c  compileRadsrunner.sh  compileradsrunner.service  radsrunner.service  setupNetworkConnection.sh  test.c
radiation-tests/RadiationTestsRunner/: CMakeLists.txt  README.md
radiation-tests/RadiationTestsRunner/src/common/: testingparams.h
radiation-tests/RadiationTestsRunner/src/server/: listener.cpp  listener.h  radsserver.cpp  tcpacceptor.h
radiation-tests/RadiationTestsRunner/src/testrunner/: Checksum.cpp  Checksum.h  radsrunner.cpp  task.cpp  task.h  taskMath.cpp  taskMath.h  test.cpp  testExternalMem.cpp  testExternalMem.h  testMath.cpp  testMath.h  testRAM.cpp  testRAM.h
scheduler/: .gdb_history  .gitignore  README.md  scheduler-test  scheduler.mk
scripts/: qemu.sh
src/: main.py  main.py.backup  satelliteControl
test/: BUILD  HeliumLib_test.cc  SensorCommsLib_test.cc  message_test.cpp
(+61 files in other folders)
